Mano kvaila klaida

--- a/bakalaurinis.tex
+++ b/bakalaurinis.tex
@@ -509,7 +509,7 @@ Kadangi sistema pritaikyta asmeniniam kompiuteriui, ji privalo turėti grafinę 
 \end{figure}
 
 Kaip matoma iš \ref{fig:GUI} pav., vartotojo sąsaja yra pakankamai minimalistinė ir lengvai perprantama. Programinės įrangos langas suskirstytas į dvi dalis: kambario ir garso šaltinio informacijos nustatymus.
-Teisingam sistemos, darbui būtina nustatyti pagrindinius kambario parametrus reikalingus KIA generavimui. Parametrų sąrašą sudaro: ilgis, plotis, aukštis ir kambario sienų sugerties koeficientas $R$, pastarasis turi būti -1$\leq$R$\leq$1 intervale.
+Teisingam sistemos darbui, būtina nustatyti pagrindinius kambario parametrus reikalingus KIA generavimui. Parametrų sąrašą sudaro: ilgis, plotis, aukštis ir kambario sienų sugerties koeficientas $R$, pastarasis turi būti -1$\leq$R$\leq$1 intervale.
 Garso šaltiniui nustatyti pakanka aprašyti jo vietą virtualiame kambaryje ($x$, $y$, $z$) ir nurodyti garso bylą.
 Kadangi sistema dirba naudojant FT232 mikroschemą, būtina nurodyti virtualų COM prievadą, per kurį kompiuteryje esanti programa bei garso apdorojimo įrenginys komunuikuos. 
 
