--- a/bakalaurinis.tex
+++ b/bakalaurinis.tex
@@ -17,11 +17,33 @@
 \onehalfspacing
 
 \newpage
+
+  .
+
 \newpage
+
+    .
+
 \newpage
+
+  .  .
+  
 \newpage
+
+  .  .
+  
 \newpage
+
+  .  .
+  
 \newpage
+
+  .  .
+
+\newpage
+
+  .  .
+
 
 \tableofcontents
 
