priedai ir stuff

--- a/bakalaurinis.tex
+++ b/bakalaurinis.tex
@@ -43,6 +43,12 @@
 \newpage
 
   .  .
+\newpage
+
+  .  .
+\newpage
+
+  .  .
 
 
 \tableofcontents
@@ -290,7 +296,7 @@ Darbo metu sukurta garso apdorojimo sistema išnaudoja šiame skyriuje aprašytu
 
 \begin{figure}[!h]
   \centering
-  \includegraphics[width=300px]{img/schema.png}
+  \includegraphics[width=350px]{img/schema.png}
   \caption{Sistemos struktūrinė schema}
   \label{fig:full_schematic}
 \end{figure}
@@ -765,18 +771,64 @@ Darbe panaudotos priemonės lūkesčius pateisino iš dalies. Kaip ir buvo galim
 \addcontentsline{toc}{section}{PRIEDAI}
 
 \subsection*{1 priedas. Garso apdorojimo įrenginio pagrindinė funkcija.}
-\label{subsec:pca_source}
 
-\begin{cfigure}[!b]
+\begin{cfigure}[h]
   \centering
   \caption{Garso apdorojimo įrenginio pagrindinė funkcija}
   \lstinputlisting{sources/STM32_MAIN.c}
 \end{cfigure}
 
-\begin{cfigure}[!b]
+\begin{cfigure}[h]
   \centering
   \caption{Garso apdorojimo įrenginio pagrindinė funkcija. Tęsinys.}
   \lstinputlisting{sources/STM32_MAIN2.c}
 \end{cfigure}
+
+\subsection*{2 priedas. Galvos orientacijos įtaiso elektrinė -- principinė schema}
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=430px]{img/priedas_schema.png}
+  \caption{Galvos orientacijos įtaiso elektrinė -- principinė schema}
+\end{figure}
+
+
+\subsection*{3 priedas. Sistemos struktūrinės schemos}
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=430px]{img/priedas_strukturine_schema.png}
+  \caption{Sistemos struktūrinė schema}
+\end{figure}
+
+\subsection*{4 priedas. Programos algoritmas}
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=430px]{img/priedas_sound_algoritmas.png}
+  \caption{Garso apdorojimo įrenginio algoritmas}
+\end{figure}
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=430px]{img/priedas_head_algoritmas.png}
+  \caption{Galvos sekimo įrenginio algoritmas}
+\end{figure}
+
+\subsection*{5 priedas. Sistemos veikimą iliustruojantis plakatas}
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=460px]{img/priedas_plakatas_2.png}
+  %\caption{Garso apdorojimo įrenginio algoritmas}
+\end{figure}
+
+\subsection*{6 priedas. Užduoties ir rezultatų plakatas}
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=420px]{img/priedas_plakatas_1.png}
+  %\caption{Garso apdorojimo įrenginio algoritmas}
+\end{figure}
 
 \end{document}
