--- a/bakalaurinis.tex
+++ b/bakalaurinis.tex
@@ -155,6 +155,7 @@ HRTF ir ATF tai funkcijos, nusakančios atsaką, kuris charakterizuoja, kaip žm
 \item Atgarsiai (angl. \textit{Reverberation}).
 \end{enumerate}
 
+\noindent
 HRTF aprašo tik dalį iš aukščiau pateiktų užuominų: TLS ir TGLS.
 
 
@@ -683,7 +684,7 @@ Kaip matome iš \ref{fig:sound_energy} pav. maksimalus elektros srovės suvartoj
   \label{fig:sound_energy_5min}
 \end{figure}
 
-Kaip matome iš \ref{fig:sound_energy_5min} pav., garso apdorojimo įrenginio srovės suvartojimas, po 5 minučių įrenginio darbo padidėja tik apie 5 mA. Taip yra todėl, kad įtaisas yra geriau suprojektuotas ir neatsiranda nereikalingų įtampos kritimų, o tuo pačiu ir energijos išsklaidymo šilumos pavidalu. Taip pat čia nėra duomenų perdavimo modulio BTM222, kuris suvartoja gana nemažai elektros energijos.
+Kaip matome iš \ref{fig:sound_energy_5min} pav., garso apdorojimo įrenginio srovės suvartojimas, po 5 minučių įrenginio darbo padidėja tik apie 5 mA. Taip yra todėl, kad įtaisas yra geriau suprojektuotas ir neatsiranda nereikalingų įtampos kritimų, o tuo pačiu ir energijos išsklaidymo šilumos pavidalu. Taip pat čia nėra duomenų perdavimo modulio BTM222, kuris suvartoja nemažai elektros energijos.
 
 \newpage
 
