--- a/bakalaurinis.tex
+++ b/bakalaurinis.tex
@@ -595,7 +595,7 @@ Reikia paminėti, jog pateiktose schemose vis dar yra nedidelių netikslumų, ku
 
 \subsection{Galvos sekimo įrenginys}
 
-Šis poskyris skirtas apibendrinti galvos sekimo įrenginio veikimą bei jo charakteristikas.
+Šiame poskyryje bus apibendrintai aprašytas galvos orientacijos sekimo įrenginio veikimas. Jo elektrinės plokščių, bei programinės, jutiklių sintezės filtro, charakteristikos.
 
 \subsubsection{Jutiklių duomenų sintezės tikslumo tyrimas}
 
@@ -680,21 +680,21 @@ Kaip matome iš \ref{fig:sound_energy_5min} pav., garso apdorojimo įrenginio sr
 
 Kaip buvo minėta įvade, vienas svarbiausių sistemos vertinimo kriterijų -- sugeneruoto binauralinio garso tikslumas. Jis vertinamas palyginus tikrąjį ir sugeneruota binauralinį garsą. „Matchbox Rattle'' buvo paimtas, kaip tikrasis binauralinio garso įrašas. \ref{fig:garsas_orig} pav. iliustruoja 1,03 s. originalaus garso, tuo tarpu \ref{fig:garsas_gen} pav. demonstruoja darbo metu sistemos sugeneruotą binauralinio įrašo fragmentą.
 
-\begin{figure}[ht]
+\begin{figure}[htbp]
   \centering
   \includegraphics[width=300px]{img/garsas_originalus.png}
   \caption{„Matchbox Rattle'' garso takelio fragmentas}
   \label{fig:garsas_orig}
 \end{figure}
 
-\begin{figure}[ht]
+\begin{figure}[htbp]
   \centering
   \includegraphics[width=300px]{img/garsas_generuotas.png}
   \caption{Sugeneruoto garso takelio fragmentas}
   \label{fig:garsas_gen}
 \end{figure}
 
-\begin{figure}[ht]
+\begin{figure}[htbp]
   \centering
   \includegraphics[width=300px]{img/garso_skirtumas.png}
   \caption{Garso takelių skirtumas}
