--- a/bakalaurinis.tex
+++ b/bakalaurinis.tex
@@ -148,7 +148,7 @@ HRTF aprašo tik dalį iš aukščiau pateiktų užuominų: TLS ir TGLS.
 
 \subsection{Galvos šešėlis ir pečių aidas}
 
-Galvos šešėlis (angl. \textit{Head shadow}) arba dar kitaip vadinamas akustiniu šešėliu, tai sumažėjusios garso amplitudės sritis kuri atsiranda dėl to jog galva sugeria dalį garso bangų, o likusiųjų -- sumažina amplitudę. Pasiekusi galvą garso banga gali keliauti aplink arba kiaurai galvą, kad pasiektų ausies kriauklę, esančią priešingoje pusėje. Tokiu būdu yra sukuriamas pirminės lokalizacijos filtras. Ausį, esančią šešėlyje, garsas pasiekia maždaug 0,7 ms vėliau, todėl žmogaus smegenys sugeba nustatyti apytikslią garso sklidimo kryptį. 
+Galvos šešėlis (angl. \textit{head shadow}) dar kitaip vadinamas akustiniu šešėliu. Tai sumažėjusios garso amplitudės sritis, kuri atsiranda dėl to, kad galva sugeria dalį garso bangų, o likusiųjų -- sumažina amplitudę. Pasiekusi galvą garso banga gali keliauti aplink arba kiaurai galvą, kad pasiektų ausies kriauklę, esančią priešingoje pusėje. Tokiu būdu yra sukuriamas pirminės lokalizacijos filtras. Ausį, esančią šešėlyje, garsas pasiekia maždaug 0,7 ms vėliau, todėl žmogaus smegenys sugeba nustatyti apytikslią garso sklidimo kryptį. 
 
 Pečių aidas -- tai aidas, atsirandantis garso bangom atsispindėjus nuo klausytojo pečių. Toks aidas tiesiogiai turi mažai lokalizacijos informacijos, tačiau panaudojus jį kartu su galvos šešėliu, didėja galimybė tiksliau nustatyti garso šaltinio poziciją.
 
@@ -195,13 +195,13 @@ Veiksmas atliekamas atskirai dešiniajam ir kairiajam kanalams naudojant tą pat
 
 Duplekso teorija, pateikta Lordo Reilėjaus (Lord Rayleigh), pateikia paaiškinimus apie žmogaus galimybę lokalizuoti garsus pagal laiko skirtumą TLS tarp garsų, patenkančių į kiekvieną ausį ir taip pat skirtingo garso lygio TGLS patekimą į ausis. Bet iki šiol išlieka klausimas, ar šie skirtumai yra pastebimi.
 
-Duplekso teorija teigia, kad TLS naudojamas žemo dažnio garso šaltinio lokalizacijai, o TGLS – aukšto dažnio. Kadangi natūralus garsas sudarytas ne tik iš žemo dažnio komponentų, bet ir aukšto dažnio, tai klausos sistema turės panaudoti abi metodikas, norint tiksliai nustatyti garso šaltinio vietą. Šios dupleksinės sistemos rezultatas – ji gali taip pat generuoti taip vadinamus „garso lokalizacijos užuominų mainų“  arba „laiko intensyvumo mainų“ dirgiklius ausinėse, kur TLS, nukreiptas į kairiąją ausinių pusę, perstumtas per TGLS, kuris savo ruožtu nukreiptas į dešiniąją ausinių dalį, todėl garsas suvokiamas lyg sklistų iš vidurio. Kaip ir visos teorijos, duplekso teorija taip pat susiduria su problemomis. Pastaroji negali iki galo paaiškinti kryptingo girdėjimo, o taip pat išlieka priekinio-galinio garso šaltinio padėties girdimumo problema. Taip pat ši teorija apima tik horizontaliąją garso šaltinio lokalizaciją aplink galvą. Dar vienas teorijos netikslumas – lokalizacijos paaiškinime neatsižvelgiama į ausies kriauklės formą.
+Duplekso teorija teigia, kad TLS naudojamas žemo dažnio garso šaltinio lokalizacijai, o TGLS – aukšto dažnio. Kadangi natūralus garsas sudarytas ne tik iš žemo dažnio komponentų, bet ir aukšto dažnio, tai klausos sistema turės panaudoti abi metodikas, norint tiksliai nustatyti garso šaltinio vietą. Šios dupleksinės sistemos rezultatas – ji gali generuoti „garso lokalizacijos užuominų mainų“  arba „laiko intensyvumo mainų“ dirgiklius ausinėse. Pastarosiose TLS, nukreiptas į kairiąją ausinių pusę kompensuoja TGLS, kuris nukreiptas į dešiniąją ausinių dalį, todėl garsas suvokiamas lyg sklistų iš vidurio. Duplekso teorija negali iki galo paaiškinti kryptingo girdėjimo, o taip pat išlieka priekinio-galinio garso šaltinio padėties girdimumo problema. Taip pat ši teorija apima tik horizontaliąją garso šaltinio lokalizaciją aplink galvą. Dar vienas teorijos netikslumas – lokalizacijos paaiškinime neatsižvelgiama į ausies kriauklės formą.
 
 %TODO: metai paeist i m.
 
 1938 m. Vudvortas atliko eksperimentą, kuriame iš pilnavidurio rutulio buvo sumodeliuota žmogaus galva. Su šiuo modeliu buvo matuojami TLS kaip kampo su vertikalia plokštuma funkcija skirtingiems dažniams. Šiame galvos modelyje tarpas tarp dviejų ausų buvo 22--23 cm. Pirminiai šio eksperimento rezultatai parodė, kad didžiausias laiko tarpas, per kurį garsas patenka iš vienos ausies į kitą, buvo apie 660 μs, kai garso šaltinis buvo padėtas lygiai 90$^\circ$ kampu vertikalios plokštumos atžvilgiu. Šis laiko tarpas susidaro, kai garso bangos dažnis siekia 1500 Hz. Rezultatai parodė, jog sklindant garsui, kurio dažnis mažesnis nei 1500~Hz bangos ilgis yra didesnis negu $660 ms$ laiko tarpo. Taigi rezultatai parodo, jog tarp garso bangų, patenkančių į ausis, atsiranda fazių skirtumas ir tai sukuria akustinės lokalizacijos užuominas. Garso dažniui artėjant prie 1500 Hz, garso bangos ilgis yra panašus į natūralų garso vėlavimą. Dėl galvos dydžio ir tarpo tarp ausų yra sumažėjęs fazių skirtumas, taigi iš karto atsiranda lokalizacijos paklaida. Garso dažniui esant didesniam nei 1500 Hz, garso bangos ilgis tampa mažesnis nei atstumas tarp ausų, tuomet atsiranda „galvos šešėlis“   ir GLS suteikia garso lokalizacijos užuominų.
 
-Feddersen atliko eksperimentus (1957 m.), kuriais jis matavo, kaip kinta TLS, keičiant garsiakalbio kampą aplink galvą su vertikaliąja plokštuma, esant skirtingiems dažniams. Bet jo eksperimentai skyrėsi nuo \textit{Woodworth} tuo, kad \textit{Feddersen} atliko tyrimus su realiais žmonėmis, o ne su galvos modeliais. Šio eksperimento rezultatai sutapo su Vudvorto gautais rezultatais. Tyrimo rezultatai taip pat parodė, kad nėra jokio TLS skirtumo tarp dviejų garso šaltinio pozicijų – kai garso šaltinis yra priešais galvą (0$^\circ$) ir už galvos (180$^\circ$). Tokių rezultatų paaiškinimas – garso šaltinio atstumas iki ausų yra vienodas abiem atvejais. Laiko skirtumas keičiasi tik garso šaltiniui keliaujant aplink galvą. Šiuo eksperimentu įrodyta, kad didžiausias laiko skirtumas yra 660 μs ir jis gaunamas, garso šaltinį padėjus šalia ausies. \ref{fig:ITD_1} pav. pavaizduotas galvos modelis ir garso šaltinio skleidžiamų garso bangų kryptis ir susidarantis kampas.
+Feddersenas atliko eksperimentus (1957 m.), kuriais jis matavo, kaip kinta TLS, keičiant garsiakalbio kampą aplink galvą su vertikaliąja plokštuma, esant skirtingiems dažniams. Bet jo eksperimentai skyrėsi nuo Vudvorto tuo, kad Feddersenas atliko tyrimus su realiais žmonėmis, o ne su galvos modeliais. Šio eksperimento rezultatai sutapo su Vudvorto gautais rezultatais. Tyrimo rezultatai taip pat parodė, kad nėra jokio TLS skirtumo tarp dviejų garso šaltinio pozicijų – kai garso šaltinis yra priešais galvą (0$^\circ$) ir už galvos (180$^\circ$). Tokių rezultatų paaiškinimas – garso šaltinio atstumas iki ausų yra vienodas abiem atvejais. Laiko skirtumas keičiasi tik garso šaltiniui keliaujant aplink galvą. Šiuo eksperimentu įrodyta, kad didžiausias laiko skirtumas yra 660 μs ir jis gaunamas, garso šaltinį padėjus šalia ausies. \ref{fig:ITD_1} pav. pavaizduotas galvos modelis ir garso šaltinio skleidžiamų garso bangų kryptis ir susidarantis kampas.
 
 Iš \ref{fig:ITD_1} pav. matoma, jog kelias nuo garso šalinio iki kiekvienos ausies yra skirtingas. Garso kelias iki kairės ausies yra didesnis, nei kelias iki dešinės ausies. Šis garso kelių skirtumas, perkeltas į lauko ašį, nusako tarpausinį laiko skirtumą TLS.
 TLS yra dominuojanti garso šaltinio lokalizacijos užuomina dažniams iki 1.5 kHz (imtinai). Visiems kitiems dažniams, didesniems nei 1,5 kHz dominuojanti užuomina yra tarpausinis garso lygio skirtumas TGLS. Tarpausinis garsio lygio skirtumas atsiranda dėl taip vadinamojo „galvos šešėlio“. Jis atsiranda tik prie aukštesnių dažnių, kuomet garso bangos nebesukelia difrakcijos aplink galvą, taip sukurdamos galvos šešėlį, kuris panašus į šešėlį, susidarantį krentant šviesos bangoms link galvos.
@@ -240,7 +240,7 @@ Norint įrodyti Lordo Reilėjaus teoriją, buvo atliktas eksperimentas, kuriame 
   \label{fig:1000kHz_TGLS}
 \end{figure}
 
-Iš \ref{fig:125kHz_TGLS} ir \ref{fig:1000kHz_TGLS} pav. matome, jog lyginant du skirtingo dažnio garsus (125 kHz ir 1000 kHz), kai garso bangos kritimo kampas siekia 90$^\circ$, susidaro tarpausinio garso lygių skirtumas. Kaip ir buvo minėta, esant aukštesniems nei 1,5 kHz dažniams, tarpausinis laiko skirtumas tampa labai mažas ir tuomet dominuoja tarpausinis garso lygių skirtumas. Fizikinis šio fenomeno paaiškinimas būtų toks, kad esant aukštesniems dažniams, garso bangos sutankėja ir jų galimybė persilenkti aplink galvą stipriai sumažėja. Esant skirtingiems objektų dydžiams ir skirtingiems garso bangų dažniams, išlieka difrakcinė priklausomybė, bet šiuo atveju tai negalioja, nes naudojama standartinė vidutinio žmogaus galvos dydžio manekeno galva. Išlieka minimalūs skirtumai, nes kiekvieno žmogaus galva turi savo unikalią formą ir dydį, o tai sukuria skirtingą šešėlinį dažnį, bet šis skirtumas yra nykstamai mažas.
+Iš \ref{fig:125kHz_TGLS} ir \ref{fig:1000kHz_TGLS} pav. matome, jog lyginant du skirtingo dažnio garsus (125 kHz ir 1000 kHz), kai garso bangos kritimo kampas siekia 90$^\circ$, susidaro tarpausinio garso lygių skirtumas. Kaip ir buvo minėta, esant aukštesniems nei 1,5 kHz dažniams, tarpausinis laiko skirtumas tampa labai mažas ir tuomet dominuoja tarpausinis garso lygių skirtumas. Fizikinis šio fenomeno paaiškinimas būtų toks, kad esant aukštesniems dažniams, garso bangos sutankėja ir jų galimybė persilenkti aplink galvą stipriai sumažėja. Esant skirtingiems objektų dydžiams ir skirtingiems garso bangų dažniams, išlieka difrakcinė priklausomybė, bet šiuo atveju tai negalioja, nes naudojama standartinė vidutinio žmogaus galvos dydžio manekeno galva. Išlieka minimalūs skirtumai, nes kiekvieno žmogaus galva turi savo unikalią formą ir dydį. Šis aspektas sukuria skirtingą šešėlinį dažnį, bet šis skirtumas yra nykstamai mažas.
 
 \begin{figure}[!h]
   \centering
@@ -307,7 +307,7 @@ Garso apdorojimo įrenginys – tai sukurta įterptinė sistema, skirta binaural
 \item triašis giroskopas – kampiniam pagreičiui trijose ašyse nustatyti.
 \end{itemize}
 
-Visi šie trys jutikliai turi savo privalumus ir trūkumus, tačiau \textit{sensor fusion} algoritmai padeda padidinti galutinių duomenų tikslumą. Dažniausiai naudojamas filtras -– Kalmano, tačiau dėl didelio matematinio skaičiavimo kiekio (kuris neigiamai įtakoja bendrą mažos galios įterptinės sistemos greitaveiką) šiame darbe buvo pasirinktas paprastesnis \textit{Madgwick sensor fusion} filtras. Palyginus su Kalmano filtru, \textit{Madgwick} filtras turi tik vieną žingsnį, per kurį yra apskaičiuojami galutiniai duomenys, atsisakius nuspėjimo ir korekcijos žingsnių (kurie naudojami Kalmano filtre) sutaupomas laikas, todėl padidėja greitaveika. Tačiau atsisakius prieš tai minėtų dviejų žingsnių suprastėja filtro savybės, nes neatsižvelgiama į prieš tai buvusius duomenis.
+Visi šie trys jutikliai turi savo privalumus ir trūkumus, tačiau \textit{sensor fusion} algoritmai padeda padidinti galutinių duomenų tikslumą. Dažniausiai naudojamas filtras -– Kalmano, tačiau dėl didelio matematinio skaičiavimo kiekio (kuris neigiamai įtakoja bendrą mažos galios įterptinės sistemos greitaveiką) šiame darbe buvo pasirinktas paprastesnis \textit{Madgwick sensor fusion} filtras. \textit{Madgwick} filtras turi tik vieną žingsnį, per kurį yra apskaičiuojami galutiniai duomenys. Šiame filtre yra atsisakoma nuspėjimo ir korekcijos žingsnių, kurie naudojami Kalmano filtre. Taip yra sutaupomas laikas, todėl padidėja greitaveika. Tačiau atsisakius prieš tai minėtų dviejų žingsnių suprastėja filtro savybės, nes neatsižvelgiama į prieš tai buvusius duomenis.
 
 Madgwicko filtre orientacijai nusakyti naudojami kvaternionai\footnote{  Kvaternionas (lot. \textit{quattor} – keturi) – skaičių aibė, nekomutatyvus kompleksinių skaičių aibės praplėtimas. }, tokiu būdu išvengiamas ašių blokavimo (angl. \textit{gimbal lock}) efektas. Kvaternionas savo paprasčiausioje formoje aprašomas formule: 
 
